# annotation_app

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
